--- a/provamox/res/layout/main.xml
+++ b/provamox/res/layout/main.xml
@@ -9,4 +9,5 @@
     android:layout_height="wrap_content" 
     android:text="@string/hello"
     android:id="@+id/tv1"/>
+<AnalogClock android:id="@+id/analogClock1" android:layout_width="wrap_content" android:layout_height="wrap_content"></AnalogClock>
 </LinearLayout>
